--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         This AI project was coded by
     <a href="https://github.com/Khalipha-Saliso">Khalipha Saliso</a>,
     open-sourced on
-    <a href="#">GitHub</a>
+    <a href="https://github.com/Khalipha-Saliso/ai-content-generator">GitHub</a>
     and hosted on
     <a href="#">Netlify</a>.
     <br>
