--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     open-sourced on
     <a href="https://github.com/Khalipha-Saliso/ai-content-generator">GitHub</a>
     and hosted on
-    <a href="#">Netlify</a>.
+    <a href="https://prompt-to-content.netlify.app/">Netlify</a>.
     <br>
       Built with 💡 using the <a href="https://www.shecodes.io/" target="_blank">SheCodes API</a>
     </footer>
